src/Javafe/trunk/Javafe/test/javafe/test/fe/test18/Simple.java
class Simple extends Simple {}		// error
